# h.nix-plugin-error-demo

./: README.md  cabal.project  flake.nix  stack.yaml
lib/: lib.cabal
lib/src/: Mod.hs
plugin/: plugin.cabal
plugin/src/: Plugin.hs
