cabal-version:      3.0
name:               plugin
version:            0.1.0.0
license:            Apache-2.0
license-file:       LICENSE
author:             Shea Levy
maintainer:         slevy@anduril.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Plugin
    build-depends:    base, ghc
    hs-source-dirs:   src
    default-language: GHC2021
